--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <li><a class="scrollToLink" data-scroll="examplesTarget" >examples</a></li>
             <li><a class="scrollToLink" data-scroll="documentationTarget" >docs</a></li>
             <li><a class="scrollToLink" data-scroll="downloadTarget">download</a></li>
+            <li><a href="https://github.com/styoe/croppic">github</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
