--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 				(note that ajax is limited to same domain requests)
 			</p>
 			
-			<a class="downloadLink" target="_blank" href="img_save_to_file.php" download="img_save_to_file.php"><i class="downloadIcon small"></i> <span> Download php example file <span>  </a>		
+			<a class="downloadLink" target="_blank" href="img_save_to_file.zip" download="img_save_to_file.zip"><i class="downloadIcon small"></i> <span> Download php example file <span>  </a>		
 					
 			<p class="centered" style="margin-top:20px;">After successful image saving, you must return the following json. <br/> ( image width and height required for limiting max zoom, so images dont come out blurry. )
 			<pre>		
@@ -257,7 +257,7 @@
 	cropW 		// cropped image width
 	cropH 		// cropped image height
 			</pre>
-			<a class="downloadLink" target="_blank" href="img_crop_to_file.php" download="img_crop_to_file.php"><i class="downloadIcon small"></i> <span> Download php example file <span>  </a>		
+			<a class="downloadLink" target="_blank" href="img_crop_to_file.zip" download="img_crop_to_file.zip"><i class="downloadIcon small"></i> <span> Download php example file <span>  </a>		
 					
 			<p class="centered" style="margin-top:20px;">After successful image saving, you must return the following json. <br/> ( image width and height required for limiting max zoom, so images dont come out blurry. )
 			<pre>		
