--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Mrs+Sheppards&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-10627690-5', 'auto');
+			ga('send', 'pageview');
+
+	</script>
+	
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -470,7 +480,8 @@
 		onImgDrag:		function(){ console.log('onImgDrag') },
 		onImgZoom:		function(){ console.log('onImgZoom') },
 		onBeforeImgCrop: 	function(){ console.log('onBeforeImgCrop') },
-		onAfterImgCrop:		function(){ console.log('onAfterImgCrop') }
+		onAfterImgCrop:		function(){ console.log('onAfterImgCrop') },
+		onError:		function(errormsg){ console.log('onError:'+errormsg) }
 	}
 			</pre>
 		
@@ -524,7 +535,7 @@
 	<script src=" https://code.jquery.com/jquery-2.1.3.min.js"></script>
    
 	<script src="assets/js/bootstrap.min.js"></script>
-   	<script src="croppic.js"></script>
+   	<script src="croppic.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script>
 		var croppicHeaderOptions = {
@@ -542,7 +553,8 @@
 				onImgDrag: function(){ console.log('onImgDrag') },
 				onImgZoom: function(){ console.log('onImgZoom') },
 				onBeforeImgCrop: function(){ console.log('onBeforeImgCrop') },
-				onAfterImgCrop:function(){ console.log('onAfterImgCrop') }
+				onAfterImgCrop:function(){ console.log('onAfterImgCrop') },
+				onError:function(errormessage){ console.log('onError:'+errormessage) }
 		}	
 		var croppic = new Croppic('croppic', croppicHeaderOptions);
 		
