--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
     <script src="assets/js/main.js"></script>
     <script>
 		var croppicHeaderOptions = {
-				uploadUrl:'img_save_to_file.php',
+				//uploadUrl:'img_save_to_file.php',
 				cropData:{
 					"dummyData":1,
 					"dummyData2":"asdas"
@@ -560,6 +560,7 @@
 				cropUrl:'img_crop_to_file.php',
 				customUploadButtonId:'cropContainerHeaderButton',
 				modal:false,
+				processInline:true,
 				loaderHtml:'<div class="loader bubblingG"><span id="bubblingG_1"></span><span id="bubblingG_2"></span><span id="bubblingG_3"></span></div> ',
 				onBeforeImgUpload: function(){ console.log('onBeforeImgUpload') },
 				onAfterImgUpload: function(){ console.log('onAfterImgUpload') },
