Minor Documentation Change
Thx to @ahuggins

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				
 				<h3 class="centered">CSS</h3>
 				<pre>		
-		#cropContainerHeader {
+		#yourId {
 			width: 200px;
 			height: 150px;
 			position:relative; /* or fixed or absolute */
